--- a/package.json
+++ b/package.json
@@ -14,12 +14,21 @@
     "codegen:watch": "graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "graphql-request": "^7.2.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
+    "tailwind-merge": "^3.3.1",
     "viem": "^2.34.0",
     "zod": "^4.0.17"
   },
@@ -35,6 +44,7 @@
     "@types/react-dom": "^19",
     "gts": "^6.0.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.6.3"
   },
   "engines": {
